--- a/src/app/contacts/overlay-contacts/overlay-contacts.component.html
+++ b/src/app/contacts/overlay-contacts/overlay-contacts.component.html
@@ -1,20 +1,14 @@
 <section class="background-overlay" [class.hidden]="!overlayState.isActive ">
   <div class="content">
     <div class="overlay-contact">
-      <div class="mobile-image" (click)="resetNewContactInput();">
-        <img src="assets/img/add-contacts/user-image.svg" alt="" />
-      </div>
       <div class="d-flex">
-        <div class="add-contact">
+        <div class="add-contact">       
+            <img  class="mobile-image" (click)="resetNewContactInput();" src="assets/img/add-contacts/user-image.svg" alt="" />
           @switch (overlayState.AddOrEditState) {
           @case("addContact"){
-          <div class="mobile-close" (click)="toggleOverlay() ;resetNewContactInput();contactForm.resetForm()">
-            <img src="assets/img/add-contacts/mobile-close.svg" />
-          </div>
+            <img class="mobile-close" (click)="toggleOverlay() ;resetNewContactInput();contactForm.resetForm()" src="assets/img/add-contacts/mobile-close.svg" />
           }@case("editContact"){
-          <div class="mobile-close" (click)="toggleOverlay() ;resetNewContactInput()">
-            <img src="assets/img/add-contacts/mobile-close.svg" />
-          </div>
+            <img class="mobile-close" (click)="toggleOverlay() ;resetNewContactInput()" src="assets/img/add-contacts/mobile-close.svg" />
           }
           }
 
@@ -51,31 +45,39 @@
             <form class="contact-form" #contactForm="ngForm">
               @switch (overlayState.AddOrEditState) {
               @case ('addContact') {
-              <input [(ngModel)]="contactList.firstName" class="user" type="text" placeholder="Name" name="name"
-                required pattern="^[a-zA-ZäöüÄÖÜß]+ [a-zA-ZäöüÄÖÜß]+$" id="name" #name="ngModel"
-                [class.invalid]=" name.invalid && name.dirty " />
-              <div class="invalid-input">
-                @if (name.invalid && name.dirty) {
-                <div>Example: firstname lastname</div>
-                }
-              </div>
-              <input [(ngModel)]="contactList.email" class="mail" type="email" placeholder="Email" name="email" required
-                pattern="[a-zA-Z0-9._%+\-]+@[a-zA-Z0-9.\-]+\.[a-zA-Z]{2,}" id="mail" #mail="ngModel"
-                [class.invalid]=" mail.invalid && mail.dirty " />
-              <div class="invalid-input">
-                @if (mail.invalid && mail.dirty) {
-                <div>Example: name&#64;example.com</div>
-                }
+                <div class="inputAreas">
+                  <input [(ngModel)]="contactList.firstName" class="user" type="text" placeholder="Name" name="name"
+                  required pattern="^[a-zA-ZäöüÄÖÜß]+ [a-zA-ZäöüÄÖÜß]+$" id="name" #name="ngModel"
+                  [class.invalid]=" name.invalid && name.dirty " />
+                  <div class="invalid-input">
+                  @if (name.invalid && name.dirty) {
+                  <div>Example: firstname lastname</div>
+                  }
+                </div>
               </div>
 
-              <input [(ngModel)]="contactList.phone" class="phone" type="number" placeholder="Phone" name="phone"
-                required pattern="^\+?[0-9\s]{6,16}$" id="phone" #phone="ngModel"
-                [class.invalid]=" phone.invalid && phone.dirty " />
-              <div class="invalid-input">
-                @if (phone.invalid && phone.dirty) {
-                <div>Example: +49 30 1234567</div>
-                }
+              <div class="inputAreas">
+                <input [(ngModel)]="contactList.email" class="mail" type="email" placeholder="Email" name="email" required
+                  pattern="[a-zA-Z0-9._%+\-]+@[a-zA-Z0-9.\-]+\.[a-zA-Z]{2,}" id="mail" #mail="ngModel"
+                  [class.invalid]=" mail.invalid && mail.dirty " />
+                <div class="invalid-input">
+                  @if (mail.invalid && mail.dirty) {
+                  <div>Example: name&#64;example.com</div>
+                  }
+                </div>
               </div>
+
+              <div class="inputAreas">
+                <input [(ngModel)]="contactList.phone" class="phone" type="number" placeholder="Phone" name="phone"
+                  required pattern="^\+?[0-9\s]{6,16}$" id="phone" #phone="ngModel"
+                  [class.invalid]=" phone.invalid && phone.dirty " />
+                <div class="invalid-input">
+                  @if (phone.invalid && phone.dirty) {
+                    <div>Example: +49 30 1234567</div>
+                  }
+                </div>
+              </div>
+
               } @case ('editContact') {
               @if (overlayState.selectedUser) {
               <input [(ngModel)]="overlayState.fullNameForEdit" class="user" type="text" placeholder="Name" name="name"
