--- a/src/app/contacts/info-screen/info-screen.component.scss
+++ b/src/app/contacts/info-screen/info-screen.component.scss
@@ -1,6 +1,6 @@
 .wrapper1 {
     width: 100%;
-
+    color: var(--color-normal-text);
     section {
         font-size: 10px;
         width: 100%;
@@ -62,7 +62,7 @@
             .line {
                 width: 0.4em;
                 height: 5.9em;
-                background: #29abe2;
+                background: var(--color-hover);
                 margin-right: 2.5em;
 
                 @media (max-width: 1300px) {
@@ -77,7 +77,7 @@
 
             .line-mobile {
                 width: 12em;
-                background: #29abe2;
+                background: var(--color-hover);
                 height: 0.3em;
 
                 @media (min-width: 1301px) {
@@ -173,25 +173,30 @@
                     .edit-delete {
                         display: flex;
                         margin-left: 3.6em;
-                        gap: 1em;
+                        gap: 2em;
 
                         @media (max-width: 1300px) {
                             display: none;
                         }
-
+                        .edit{
+                            width: 55px;
+                        }
                         .edit,
                         .delete {
                             display: flex;
                             align-items: center;
+                            gap: 4px;
                             font-size: 1.8em;
-                            background-color: white;
+                            margin-top: 8px;
+                            background-color: var(--color-container);
+                            color: var(--color-normal-text);
                             border: none;
                             cursor: pointer;
-
+                            height: 24px;
                             transition: color 0.2s ease;
 
                             &:hover {
-                                color: #29abe2;
+                                color: var(--color-hover);
                                 font-size: 1.9em;
                             }
                         }
@@ -221,7 +226,6 @@
                     font-weight: 700;
                     margin-left: 2.8em;
                     margin-bottom: 1em;
-                    margin-top: 2em;
 
                     @media (max-width: 1075px) {
                         margin-left: 2em;
@@ -231,7 +235,7 @@
                 a {
                     font-size: 1.6em;
                     margin-left: 2.8em;
-                    color: #007cee;
+                    color: var(--email-link);
 
                     @media (max-width: 1075px) {
                         margin-left: 2em;
@@ -277,7 +281,7 @@
             align-items: center;
             width: 5.6em;
             height: 5.6em;
-            background: #2a3647;
+            background: var(--color-button);
             border-radius: 50%;
             cursor: pointer;
 
@@ -293,17 +297,17 @@
             //#endregion
 
             &:hover {
-                background: #29abe2;
+                background: var(--color-hover);
             }
 
             .dropdown-menu {
                 position: absolute;
                 right: 0em;
-                background-color: white;
+                background-color: var(--color-container);
                 border-radius: 20px;
                 border-bottom-right-radius: 0;
                 box-shadow: 6px 4px 10px rgba(0, 0, 0, 0.274);
-                padding: 1em 0.2em;
+                padding: 0em 0.2em;
                 width: 120px;
                 z-index: 100;
                 animation: fade-in-left 0.5s ease-in-out;
@@ -311,20 +315,18 @@
 
             .dropdown-menu div {
                 display: flex;
-                justify-content: center;
                 align-items: center;
                 padding: 1em 1em;
                 cursor: pointer;
             }
 
             .edit {
-                display: flex;
-                justify-content: start;
-                align-items: center;
+                width: 100%;
             }
 
             .dropdown-menu div:hover {
-                background-color: #f0f0f0;
+                background-color: var(--color-bg);
+                border-radius: 15px;
             }
 
             .dropdown-menu img {
