--- a/src/app/shared/nav-footer/nav-footer.component.scss
+++ b/src/app/shared/nav-footer/nav-footer.component.scss
@@ -4,7 +4,7 @@ section {
     flex-direction: column;
     height: 100dvh;
     width: 23em;
-    background: #2a3647;
+    background: var(--color-button);
     z-index: 5;
     padding: 4.8em 0;
 
@@ -65,7 +65,8 @@ section {
 
                     &:hover {
                         cursor: pointer;
-                        background: #2a3d59;
+                        background: var(--color-hover-nav);
+                        color: var(--color-hover);
                     }
                 }
 
@@ -74,7 +75,7 @@ section {
 
                 .active {
                     color: #ffffff;
-                    background: #091931;
+                    background: var(--color-active-nav);
                     font-weight: normal;
 
                     img {
@@ -83,7 +84,8 @@ section {
 
                     &:hover {
                         cursor: default;
-                        background: #091931;
+                        background: var(--color-active-nav);
+                        color: #ffffff;
                     }
                 }
             }
@@ -103,11 +105,12 @@ section {
             padding: 0.5em;
             opacity: 0.5;
             font-size: 1.6em;
+            height: 40px;
 
             &:hover {
                 opacity: 1;
                 font-size: 1.1rem;
-                color: #29abe2;
+                color: var(--color-hover);
             }
         }
     }
