--- a/src/app/shared/privacy-sign-in/privacy-sign-in.component.scss
+++ b/src/app/shared/privacy-sign-in/privacy-sign-in.component.scss
@@ -14,16 +14,20 @@ header {
     min-height: 9dvh;
     padding-left: clamp(2em, 8vw, 5em);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    .header-title{
+
+    .header-title {
         display: flex;
-        @media(max-width: 750px){
+
+        @media(max-width: 750px) {
             display: none;
         }
     }
-    img{
+
+    img {
         display: flex;
         height: 50px;
-        @media(min-width: 750px){
+
+        @media(min-width: 750px) {
             display: none;
         }
     }
@@ -55,6 +59,11 @@ header {
         h4 {
             margin: 1em 0;
         }
+
+        ul {
+            padding-left: 2em;
+            margin: 1em 0;
+        }
     }
 }
 
@@ -62,7 +71,7 @@ header {
     display: flex;
 }
 
-.nav-desktop{
+.nav-desktop {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -71,17 +80,20 @@ header {
     width: 230px;
     background-color: #2a3647;
     padding: 60px 0px;
-    .logo-login{
+
+    .logo-login {
         display: flex;
         flex-direction: column;
         align-items: center;
         gap: 100px;
         width: 230px;
-        img{
+
+        img {
             height: 121px;
             width: 101px;
         }
-        .log-in{
+
+        .log-in {
             display: flex;
             align-items: center;
             justify-content: center;
@@ -89,19 +101,23 @@ header {
             width: 100%;
             height: 40px;
             gap: 8px;
-            &:hover{
+
+            &:hover {
                 background-color: #2a3d59;
             }
-            img{
+
+            img {
                 width: 26px;
                 height: 26px;
             }
         }
-        .span-one{
+
+        .span-one {
             color: white;
         }
     }
-    .privacy-legal-notice{
+
+    .privacy-legal-notice {
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -109,7 +125,8 @@ header {
         color: #a8a8a8;
         width: 230px;
         cursor: pointer;
-        .span-two{
+
+        .span-two {
             display: flex;
             align-items: center;
             justify-content: center;
@@ -117,27 +134,29 @@ header {
             height: 35px;
             width: 100%;
         }
-        .span-three{
+
+        .span-three {
             display: flex;
             align-items: center;
             justify-content: center;
             right: 7px;
             width: 100%;
-            &:hover{
+
+            &:hover {
                 color: #59cdff;
             }
-            
+
         }
     }
 }
 
-@media(max-width:965px){
-    .nav-desktop{
+@media(max-width:965px) {
+    .nav-desktop {
         display: none;
     }
 }
 
-.nav-mobile{
+.nav-mobile {
     display: none;
     justify-content: space-between;
     align-items: center;
@@ -146,20 +165,24 @@ header {
     padding: 0px clamp(10px, 5vw, 40px);
     color: #a8a8a8;
     background-color: #2a3647;
-    .logo-login-mobile{
+
+    .logo-login-mobile {
         display: flex;
         flex-direction: column;
-        img{
+
+        img {
             height: 26px;
         }
     }
-    .privacy-legal-notice-mobile{
+
+    .privacy-legal-notice-mobile {
         display: flex;
         align-items: center;
         height: 8dvh;
         gap: 10px;
         font-size: 14px;
-        .span-two-mobile{
+
+        .span-two-mobile {
             display: flex;
             align-items: center;
             background-color: #091931;
@@ -167,7 +190,8 @@ header {
             border-radius: 15px;
             padding: 0px 5px;
         }
-        .span-three-mobile{
+
+        .span-three-mobile {
             display: flex;
             align-items: center;
             height: 100%;
@@ -177,8 +201,8 @@ header {
     }
 }
 
-@media(max-width:965px){
-    .nav-mobile{
+@media(max-width:965px) {
+    .nav-mobile {
         display: flex;
     }
 }
